Modified CSS to improve UX

--- a/style.css
+++ b/style.css
@@ -1,9 +1,50 @@
+html * {
+    font-family: monospace;
+    text-align: center;
+}
+body {
+    background-color: #EFC826;
+    display: block;
+    width: 100%;
+}
+h1 {
+    padding: 50px;
+}
+.btn {
+    background-color: #151E43;
+    font-size: 30px;
+    width: auto;
+    color: white;
+    border: 0px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+@keyframes flash {
+	0% { opacity: 1; } 
+	50% { opacity: .1; } 
+	100% { opacity: 1; }
+}
+.btn:hover {
+    opacity: 1;
+    -webkit-animation: flash 1s;
+    animation: flash 1s;
+    animation-iteration-count: infinite;
+}
+.btn:focus {
+    background-color: #5E8F9B;
+}
+a {
+    margin: 30px;
+}
 .pad-container {
-    display:grid;
+    display: grid;
     height: 600px;
     width: 600px;
     grid-template-columns: 16, 1fr;
+    background-color: #5E8F9B;
+    margin-left: auto;
+    margin-right: auto;
 }
 .cell {
-    background-color: aqua;
+    background-color: #5E8F9B;
 }
